[package]
name = "yt-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
tao = "0.30"
wry = "0.44"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
regex = "1"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
winresource = "0.1"
